# RubyFPV

./: LICENSE  Makefile  README.md  make_radxa.sh  makeall.sh  makeruncentral.sh  makevehicle.sh  version_ruby_base.txt
RubyTouch/: README.md  touch_handler.cpp
base/: alarms.c  alarms.h  base.h  camera_utils.cpp  camera_utils.h  commands.cpp  commands.h  config.c  config.h  config_file_names.h  config_obj_names.h  config_rc.h  config_video.cpp  config_video.h  core_plugins_settings.h  ctrl_interfaces.cpp  ctrl_interfaces.h  ctrl_settings.c  ctrl_settings.h  flags.h  gpio.c  gpio.h  hardware.c  hardware.h  hardware_i2c.c  hardware_radio.c  hardware_radio.h  hardware_serial.c  hardware_serial.h  hw_procs.c  hw_procs.h  launchers.cpp  launchers.h  models.cpp  models.h  plugins_settings.cpp  plugins_settings.h  shared_mem.c  shared_mem.h  shared_mem_controller_only.h  (+4 more)
code/r_tests/pico_spi/main/: CMakeLists.txt  test_spi.c
common/: radio_stats.c  radio_stats.h  string_utils.c  string_utils.h
licenses/: licence.txt  licence_ruby.txt  license.txt  license_ruby.txt
public/: i2c_protocols.h  render_engine_ui.h  settings_info.h  telemetry_info.h
r_central/: Makefile  colors.cpp  colors.h  events.cpp  events.h  handle_commands.cpp  launchers_controller.cpp  launchers_controller.h  link_watch.cpp  link_watch.h  local_stats.cpp  local_stats.h  media.cpp  media.h  menu.cpp  menu.h  menu_calibrate_hdmi.h  menu_channels_select.cpp  menu_color_picker.h  menu_controller.cpp  menu_controller.h  menu_controller_expert.cpp  menu_controller_joystick.cpp  menu_controller_plugins.cpp  (+149 more)
(+1097 files in other folders)
